Fixed z-index of popover menu

--- a/scss/partials/_global.scss
+++ b/scss/partials/_global.scss
@@ -264,6 +264,7 @@ input, select {
 			}
 
 			> ul {
+				z-index: 100;
 				display: none;
 				position: absolute;
 				top: 100%;
